# web-scraping

./: README.md  pyproject.toml
tests/: test_scaper.py
web_scraping/: scraper.py
